NTR - include q&a feedback into the order state module

--- a/Resources/administration/src/module/sw-order/component/sw-order-state-history-card-entry/sw-order-state-history-card-entry.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-state-history-card-entry/sw-order-state-history-card-entry.scss
@@ -2,7 +2,7 @@
 
 $sw-order-state-card-neutral: $color-gutenberg;
 $sw-order-state-card-progress: $color-shopware-blue;
-$sw-order-state-card-danger: $color-pumpkin-spice;
+$sw-order-state-card-danger: $color-crimson;
 $sw-order-state-card-success: $color-emerald;
 
 .sw-order-state-card-entry {
