--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.scss
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.scss
@@ -1,6 +1,6 @@
 .sw-customer-detail-addresses {
     .sw-customer-detail-addresses__toolbar {
-        margin-bottom: 30px;
+        margin: 20px;
     }
 
     .sw-customer-detail-addresses__confirm-delete-text {
