Add disabled state to sw number field

--- a/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
@@ -9,5 +9,6 @@
            @keydown.down="decreaseNumberByStep"
            @change="onChange"
            v-bind="$attrs"
+           :disabled="disabled"
            v-model="currentValue"/>
 {% endblock %}
