--- a/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
@@ -29,7 +29,19 @@
                      class="field--multi field--main"
                      @input="updateTaggedValue">
     </sw-tagged-field>
-    {# TODO Add type for range filter, wait for design #}
+    <sw-field
+            v-if="condition.type == 'range'"
+            type="number"
+            class="field--main has--arrow"
+            v-model="condition.parameters.lte">
+    </sw-field>
+    <sw-field
+            v-if="condition.type == 'range'"
+            type="number"
+            class="field--main"
+            v-model="condition.parameters.gte">
+    </sw-field>
+
     <sw-field v-else
               type="text"
               class="field--main"
