NTR - Add placeholder option for sw-avatar

--- a/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.scss
+++ b/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.scss
@@ -16,4 +16,8 @@ $sw-avatar-size-default:   40px;
     text-transform: uppercase;
     color: $sw-avatar-color-initials;
     user-select: none;
+
+    .sw-icon {
+        color: $color-shopware-blue;
+    }
 }
