--- a/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.html.twig
+++ b/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.html.twig
@@ -4,9 +4,14 @@
           ref="swAvatar"
           role="img">
         <slot>
-            {% block sw_avatar_slot_default %}
-                <span v-if="!imageUrl || !imageUrl.length" class="sw-avatar__initials">
+            {% block sw_avatar_slot_imageUrl %}
+                <span v-if="!showPlaceholder" class="sw-avatar__initials">
                     {{ avatarInitials }}
+                </span>
+            {% endblock %}
+            {% block sw_avatar_slot_placeholder %}
+                <span v-if="showPlaceholder">
+                    <sw-icon name="default-avatar-single"></sw-icon>
                 </span>
             {% endblock %}
         </slot>
