--- a/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -62,6 +62,13 @@
                                 {{ $tc('sw-product.detail.tabProperties') }}
                             </sw-tabs-item>
                         {% endblock %}
+
+                        {% block sw_product_detail_content_tabs_advanced_variants %}
+                            <sw-tabs-item :route="{ name: 'sw.product.detail.variants', params: { id: $route.params.id } }"
+                                          :title="$tc('sw-product.detail.tabVariants')">
+                                {{ $tc('sw-product.detail.tabVariants') }}
+                            </sw-tabs-item>
+                        {% endblock %}
                     </sw-tabs>
                 {% endblock %}
 
