NEXT-2067 . Refactor menu which works now with children

--- a/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
@@ -7,6 +7,7 @@
         {% block sw_admin_menu_item_router_link %}
             <router-link v-if="entry.path"
                          class="sw-admin-menu__navigation-link"
+                         :class="{'router-link-active': subIsActive(entry.path)}"
                          :to="getLinkToProp">
 
                 {% block sw_admin_menu_item_icon %}
