NEXT-1828 - add default address checkbox to modal

--- a/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
@@ -109,5 +109,23 @@
                 {% endblock %}
             </sw-container>
         {% endblock %}
+
+        {% block sw_customer_address_form_default_shipping_address %}
+            <sw-field type="checkbox"
+                      v-model="this.isDefaultShippingAddressId"
+                      :disabled="this.isDefaultShippingAddressId"
+                      @change="onChangeDefaultShippingAddress"
+                      :label="$tc('sw-customer.detailAddresses.contextMenuDefaultShippingAddress')">
+            </sw-field>
+        {% endblock %}
+
+        {% block sw_customer_address_form_default_billing_address %}
+            <sw-field type="checkbox"
+                      v-model="this.isDefaultBillingAddressId"
+                      :disabled="this.isDefaultBillingAddressId"
+                      @change="onChangeDefaultBillingAddress"
+                      :label="$tc('sw-customer.detailAddresses.contextMenuDefaultBillingAddress')">
+            </sw-field>
+        {% endblock %}
     </div>
 {% endblock %}
