--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
@@ -33,7 +33,7 @@
                             {% block sw_media_modal_folder_settings_default_folder %}
                                 <sw-select id="defaultFolder"
                                            class="sw-media-folder-settings-modal__default-folder-select"
-                                           :value="defaultFolder ? defaultFolder.id : ''"
+                                           :value="folder.defaultFolderId ? folder.defaultFolderId : ''"
                                            :store="mediaDefaultFolderStore"
                                            :label="$tc('global.sw-media-modal-folder-settings.labelDefaultFolder')"
                                            @input="onInputDefaultFolder"
