NEXT-1900 - Refactor the item so that it uses the router-link as root element

--- a/Resources/administration/src/app/component/base/sw-side-navigation-item/sw-side-navigation-item.twig
+++ b/Resources/administration/src/app/component/base/sw-side-navigation-item/sw-side-navigation-item.twig
@@ -1,7 +1,5 @@
 {% block sw_side_navigation_item %}
-    <div class="sw-side-navigation-item">
-        <router-link v-bind="$props">
-            <slot></slot>
-        </router-link>
-    </div>
+    <router-link v-bind="$attrs" class="sw-side-navigation-item">
+        <slot></slot>
+    </router-link>
 {% endblock %}
