--- a/Resources/administration/src/app/component/base/sw-side-navigation-item/sw-side-navigation-item.scss
+++ b/Resources/administration/src/app/component/base/sw-side-navigation-item/sw-side-navigation-item.scss
@@ -3,24 +3,21 @@
 $sw-side-navigation-item-link-color: $color-gutenberg;
 $sw-side-navigation-item-link-distance: 10px;
 
-.sw-side-navigation-item {
+a.sw-side-navigation-item {
+    transition: 0.3s all ease-in-out;
+    position: relative;
+    display: block;
+    padding: $sw-side-navigation-item-link-distance;
+    text-decoration: none;
+    font-weight: 600;
+    border-left: 1px solid lighten($sw-side-navigation-item-link-color, 45);
+    color: lighten($sw-side-navigation-item-link-color, 30);
 
-    a {
-        transition: 0.3s all ease-in-out;
-        position: relative;
-        display: inline-block;
-        padding: $sw-side-navigation-item-link-distance;
-        text-decoration: none;
-        font-weight: 600;
-        border-left: 1px solid lighten($sw-side-navigation-item-link-color, 45);
-        color: lighten($sw-side-navigation-item-link-color, 30);
+    &.router-link-active {
+        color: $sw-side-navigation-item-link-color;
+    }
 
-        &.sw-side-navigation-item--active {
-            color: $sw-side-navigation-item-link-color;
-        }
-
-        &:hover {
-            color: $sw-side-navigation-item-link-color;
-        }
+    &:hover {
+        color: $sw-side-navigation-item-link-color;
     }
 }
