NEXT-1843 - fix grid emtpty state if rows selectable

--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
@@ -52,6 +52,7 @@
                     {% block sw_settings_snippet_list_grid %}
                         <sw-grid v-if="grid"
                                  :items="grid"
+                                 :header="!!grid.length"
                                  :isFullpage="true"
                                  :sidebar="true"
                                  @sort-column="onSortColumn"
